# iot

./: .env.example  .gitignore  README.md  TODO.md  aurdino.cpp  gesture.py  jarvis-commands.md  pyproject.toml  requirements.txt  setup.md  spotify.py  voice.py
.github/workflows/: ci.yml
iot_control/: gesture.py  voice.py
jarvis_control/: __init__.py  gesture.py  voice.py
lessons/: README.md  lesson_01_open_camera.py  lesson_02_count_fingers.py  lesson_03_two_finger_screenshot.py  lesson_04_voice_control.py  lesson_05_spotify_integration.py  lesson_06_gesture_recognition_full.py
scripts/: get_google_keys.py  run_gesture.py
